[package]
name = "wasm_xr"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = {version = "0.3.72", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window','Navigator','WebGl2RenderingContext','XrReferenceSpace','XrReferenceSpaceType','XrRigidTransform','XrSystem','XrSessionMode', 'XrRenderStateInit','XrWebGlLayer','console', 'XrSession','EventTarget']}

[lib]
crate-type = ["cdylib"]
